package core;

import core.utils.Vector3D;

public class Camera {
    Vector3D coords;
    double fov;
    
}
